test/Fail/Issue4755a.err
Issue4755a.agda:23.13-16: warning: -W[no]RewriteVariablesBoundMoreThanOnce
rew  is not a legal rewrite rule, since the following parameters are bound more than once on the left hand side:  A. Perhaps you can use a postulate instead of a constructor as the head symbol?
when checking the pragma REWRITE rew

Issue4755a.agda:26.8-12: error: [UnequalTerms]
c (box Bool) r != dr of type D Bool
when checking that the expression refl has type c (box Bool) r ≡ dr
